force-app/main/default/objects/PNNL_Fund_Code__c/PNNL_Fund_Code__c.object-meta.xml
<CustomObject>
    <label>Fund Code</label>
    <nameField>
        <label>Fund Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>