force-app/main/default/objects/PNNL_Fund_Code__c/fields/PNNL_Approved__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Approved__c</fullName>
    <formula>PNNL_Approved_Ceiling__c  /  PNNL_Requested_Ceiling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>