force-app/main/default/objects/PNNL_Fund_Code__c/fields/PNNL_Approved_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Approved_Ceiling__c</fullName>
    <label>Approved Ceiling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>