force-app/main/default/objects/PNNL_Fund_Code__c/fields/PNNL_Balance__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Balance__c</fullName>
    <formula>PNNL_Approved_Ceiling__c - PNNL_Total_Obligations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>