force-app/main/default/objects/PNNL_Fund_Code__c/fields/PNNL_Obligated__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Obligated__c</fullName>
    <formula>PNNL_Total_Obligations__c / PNNL_Approved_Ceiling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obligated %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>