force-app/main/default/objects/PNNL_Fund_Code__c/fields/PNNL_PNNL_Contract__c.field-meta.xml
<CustomField>
    <fullName>PNNL_PNNL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNNL Contract</label>
    <referenceTo>PNNL_Contracts__c</referenceTo>
    <relationshipLabel>Fund Codes</relationshipLabel>
    <relationshipName>Fund_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>