force-app/main/default/objects/PNNL_Fund_Code__c/fields/PNNL_Total_Obligations__c.field-meta.xml
<CustomField>
    <fullName>PNNL_Total_Obligations__c</fullName>
    <label>Total Obligations</label>
    <summarizedField>PNNL_Funding_Obligation__c.PNNL_Amount__c</summarizedField>
    <summaryForeignKey>PNNL_Funding_Obligation__c.Fund_Code__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>