force-app/main/default/objects/PNNL_Fund_Code__c/validationRules/Fund_Code_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Fund_Code_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Fund Code can&apos;t be edited after the record has been created. 
Please Contact your System Administrator for assistance</errorMessage>
</ValidationRule>