force-app/main/default/objects/PNNL_Fund_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PNNL_Active__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>PNNL_Requested_Ceiling__c</columns>
    <columns>PNNL_Approved_Ceiling__c</columns>
    <columns>PNNL_Balance__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>